add missing build directory

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 .DS_Store
 E550.xcodeproj/xcuserdata/
 E550.xcodeproj/project.xcworkspace/xcuserdata
-build/*
+build/*.aml
 downloads/*
 AppleHDA_CX20751.kext
 AppleHDAHCD_CX20751.kext
