--- a/config_install.plist
+++ b/config_install.plist
@@ -140,7 +140,7 @@
 				<key>Find</key>
 				<data>AQAAdSU=</data>
 				<key>MatchOS</key>
-				<string>10.12.x</string>
+				<string>10.12.x,10.13.x</string>
 				<key>Name</key>
 				<string>com.apple.iokit.IOGraphicsFamily</string>
 				<key>Replace</key>
